fix navbar and update paragraph alignment

--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,7 @@ color:#0053af
   line-height: 0.95em;
   text-transform: uppercase;
 }
+
+p {
+  text-align: justify;
+}
